[package]
name = "byte_struct"
version = "0.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple (de)serializer for struct in packed binary format. Also supports bit fields!"
repository = "https://github.com/wwylele/byte-struct-rs"
keywords = ["struct", "bitfield", "serialization"]
categories = ["encoding"]

[dependencies]
byte_struct_derive = { version = "0.1.0", path = "../byte_struct_derive" }

[dev-dependencies]
