[package]
name = "byte_struct"
version = "0.2.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Pack and unpack structure as raw bytes with packed or bit field layout."
repository = "https://github.com/wwylele/byte-struct-rs"
keywords = ["struct", "bitfield", "serialization"]
categories = ["encoding"]
readme = "../README.md"

[dependencies]
byte_struct_derive = { version = "0.2.0", path = "../byte_struct_derive" }

[dev-dependencies]
