[package]
name = "byte_struct_derive"
version = "0.2.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Derive macro for byte_struct"
repository = "https://github.com/wwylele/byte-struct-rs"

[lib]
proc-macro = true

[dependencies]
syn = "0.14.4"
quote = "0.6.3"
proc-macro2 = "0.4"
